--- a/app/views/partials/_post_item.html.erb
+++ b/app/views/partials/_post_item.html.erb
@@ -1,8 +1,8 @@
 <div class=''>
-  <h4 class='text-xl bp-3 text-pink-900'>
+<h4 class='text-xl bp-3 text-pink-900'>
 <%= link_to user_post_path(post.author, post) do %>
   <div class='py-2 text-pink-900'>
-    <span class='text-pink-900'>#<%= index + 1 %></span>
+    <span class='text-pink-900'>Post <%=index + 1%> - </span>
     <%= post.title %>
   </div>
 <% end %>
