--- a/app/views/partials/_user_profile.html.erb
+++ b/app/views/partials/_user_profile.html.erb
@@ -1,7 +1,7 @@
 <a href="/users/<%= user.id %>">
   <div class='mb-4 flex gap-2 items-center border-2 border-pink-900 rounded-2xl overflow-hidden shadow'>
     <div class='m-3.5'>
-      <%= image_tag user.photo_url, alt: "profil image", width: "100px", height: "100px" %>
+      <%= image_tag user.photo_url, alt: "User Profile", width: "90px", height: "90px", class: "user_avatar" %>
     </div>
     <div class='relative w-full'>
       <p class='text-3xl text-pink-900 font-bold'>
